--- a/Keeble/styles/globals.css
+++ b/Keeble/styles/globals.css
@@ -23,3 +23,15 @@ body {
         pl-2 pr-2 pt-2 pb-2 rounded-2xl shadow-xl hover:shadow-none hover:bg-black transition-all;
 }
 
+.head_text_lg {
+    @apply text-3xl font-extrabold font-roboto text-text-white;
+}
+
+.head_text_md {
+    @apply text-xl font-light font-roboto text-text-white;
+}
+
+.dropdown_login {
+    @apply flex flex-col items-center justify-center gap-5 absolute top-12 right-0 bg-background-black-nav 
+        shadow-lg rounded-lg w-48 px-5 py-5 ;
+}
