--- a/Keeble/styles/globals.css
+++ b/Keeble/styles/globals.css
@@ -14,12 +14,12 @@ body {
 }
 
 .login_btn {
-    @apply rounded-full border border-mulled-wine bg-mulled-wine py-1.5 px-5 text-lg
+    @apply rounded-full border  bg-button-grey py-1.5 px-5 text-lg
         text-titan-white transition-all hover:bg-black;
 }
 
 .customise_btn {
-    @apply border border-mulled-wine bg-mulled-wine text-titan-white font-roboto text-2xl
+    @apply border bg-button-grey text-titan-white font-roboto text-2xl
         pl-2 pr-2 pt-2 pb-2 rounded-2xl shadow-xl hover:shadow-none hover:bg-black transition-all;
 }
 
