--- a/Keeble/styles/globals.css
+++ b/Keeble/styles/globals.css
@@ -13,22 +13,18 @@ body {
     margin: 0;
 }
 
-.login_btn {
+.button{
     @apply rounded-full border  bg-button-grey py-1.5 px-5 text-lg
         text-titan-white transition-all hover:bg-black;
 }
 
-.customise_btn {
-    @apply border bg-button-grey text-titan-white font-roboto text-2xl
-        pl-2 pr-2 pt-2 pb-2 rounded-2xl shadow-xl hover:shadow-none hover:bg-black transition-all;
-}
 
 .head_text_lg {
     @apply text-3xl font-extrabold font-roboto text-text-white;
 }
 
 .head_text_md {
-    @apply text-xl font-light font-roboto text-text-white;
+    @apply font-roboto text-text-white;
 }
 
 .dropdown_login {
