--- a/Keeble/styles/globals.css
+++ b/Keeble/styles/globals.css
@@ -1,12 +1,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Inter:wght@400;600;700&family=Roboto:wght@400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
+    font-family: Josefin Sans, sans-serif;
     display: flex;
     flex-direction: column;
     padding: 0;
