--- a/Keeble/styles/globals.css
+++ b/Keeble/styles/globals.css
@@ -8,11 +8,11 @@
 
 body {
     font-family: Josefin Sans, sans-serif;
+    font-size: 16px;
     display: flex;
     flex-direction: column;
     padding: 0;
     margin: 0;
-    color: #DDDDDD;
 }
 
 .button{
