--- a/Keeble/styles/globals.css
+++ b/Keeble/styles/globals.css
@@ -48,3 +48,7 @@ body {
 .fancy_button {
     @apply bg-gradient-to-r from-warm-blue to-cool-blue text-white px-4 py-2 rounded-full text-base cursor-pointer;
 }
+
+.delete_button {
+    @apply bg-gradient-to-r from-warm-red to-cool-red text-white px-4 py-2 rounded-full text-base cursor-pointer;
+}
