--- a/Keeble/styles/globals.css
+++ b/Keeble/styles/globals.css
@@ -52,3 +52,7 @@ body {
 .delete_button {
     @apply bg-gradient-to-r from-warm-red to-cool-red text-white px-4 py-2 rounded-full text-base cursor-pointer;
 }
+
+ul {
+    list-style: disc;
+}
