--- a/Keeble/styles/globals.css
+++ b/Keeble/styles/globals.css
@@ -37,6 +37,10 @@ body {
     @apply text-3xl font-extrabold text-text-white;
 }
 
+.heading_black {
+    @apply text-2xl font-extrabold text-dull-black;
+}
+
 .divider {
     @apply w-full border-solid border-text-white border-2;
 }
